--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@codemirror/lang-cpp": "^6.0.2",
     "@docusaurus/core": "^3.3.2",
     "@docusaurus/preset-classic": "^3.3.2",
     "@iconify/react": "^4.1.1",
     "@mdx-js/react": "^3.0.0",
+    "@uiw/codemirror-theme-dracula": "^4.22.0",
+    "@uiw/react-codemirror": "^4.22.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
