--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -3,3 +3,8 @@ edubart:
   title: Developer of RIVES emulator
   url: https://github.com/edubart
   image_url: https://github.com/edubart.png
+mux:
+  name: mux
+  title: Rives core-team
+  url: https://x.com/Max_Hatesuer
+  image_url: https://pbs.twimg.com/profile_images/1763287781139259392/IOJf0__8_400x400.jpg
