Rives overview article added

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -8,3 +8,8 @@ mux:
   title: Rives core-team
   url: https://x.com/Max_Hatesuer
   image_url: https://pbs.twimg.com/profile_images/1763287781139259392/IOJf0__8_400x400.jpg
+carlo:
+  name: carlo
+  title: Rives core-team
+  url: https://x.com/carlofragni
+  image_url: https://pbs.twimg.com/profile_images/1763277099274498048/hIdXKiRo_400x400.jpg
