--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
   },
   "dependencies": {
     "@codemirror/lang-cpp": "^6.0.2",
-    "@docusaurus/core": "^3.3.2",
-    "@docusaurus/preset-classic": "^3.3.2",
-    "@iconify/react": "^4.1.1",
-    "@mdx-js/react": "^3.0.0",
-    "@uiw/codemirror-theme-dracula": "^4.22.0",
-    "@uiw/react-codemirror": "^4.22.0",
-    "clsx": "^2.0.0",
-    "prism-react-renderer": "^2.3.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "@docusaurus/core": "^3.4.0",
+    "@docusaurus/preset-classic": "^3.4.0",
+    "@iconify/react": "^5.0.2",
+    "@mdx-js/react": "^3.0.1",
+    "@uiw/codemirror-theme-dracula": "^4.23.0",
+    "@uiw/react-codemirror": "^4.23.0",
+    "clsx": "^2.1.1",
+    "prism-react-renderer": "^2.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.3.2",
-    "@docusaurus/tsconfig": "^3.3.2",
-    "@docusaurus/types": "3.3.0",
-    "typescript": "~5.2.2"
+    "@docusaurus/module-type-aliases": "^3.4.0",
+    "@docusaurus/tsconfig": "^3.4.0",
+    "@docusaurus/types": "^3.4.0",
+    "typescript": "^5.2.4"
   },
   "browserslist": {
     "production": [
